Using better build system
Signed-off-by: Nick Jonas <njonas45@gmail.com>

--- a/www_public/index.html
+++ b/www_public/index.html
@@ -2,14 +2,14 @@
 	<head>
 
 		<title>Tweeds</title>
-
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 		<link rel="stylesheet" href="/assets/css/main.css">
-
 	</head>
 
 	<body>
 
+		<!-- Application source. -->
+  		<script data-main="/src/config" src="/assets/js/libs/require.js"></script>
 
 	</body>
 
