--- a/www_public/index.html
+++ b/www_public/index.html
@@ -8,8 +8,39 @@
 
 	<body>
 
+		<div class="container">
+
+			<div class="main-nav closed">
+				<div class="nav-content">
+					<span class="logo-text hide-text">Tweeds</span>
+					<div class="nav-buttons">
+						<ul>
+							<li><a href="#" class="lookbook hide-text">LOOKBOOK</a></li>
+							<li><a href="#" class="collection hide-text">COLLECTION</a></li>
+							<li><a href="#" class="about hide-text">ABOUT</a></li>
+							<li><a href="#" class="buy hide-text">BUY</a></li>
+							<li><a href="#" class="instagram hide-text">INSTAGRAM</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="boxes">
+					<a id="logo-icon" class="box hide-text" href="/">Tweeds
+						<span class="icon"></span>
+					</a>
+					<a id="nav-arrow" class="box hide-text" href="#/nav">Navigation
+						<span class="arrow"></span>
+					</div>
+				</div>
+			</div>
+
+
+		</div>
+
 		<!-- Application source. -->
   		<script data-main="/src/config" src="/assets/js/libs/require.js"></script>
+
+  		<!-- Live Reload -->
+  		<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
 	</body>
 
