Nav complete (not responsive)
Signed-off-by: Nick Jonas <njonas45@gmail.com>

--- a/www_public/index.html
+++ b/www_public/index.html
@@ -21,6 +21,10 @@
 							<li><a href="#" class="buy hide-text">BUY</a></li>
 							<li><a href="#" class="instagram hide-text">INSTAGRAM</a></li>
 						</ul>
+						<div class="social-buttons">
+							<a href="http://www.facebook.com/tweeds" target="_blank" class="social facebook hide-text">Facebook</a>
+							<a href="http://www.twitter.com/tweeds" target="_blank" class="social twitter hide-text">Twitter</a>
+						</div>
 					</div>
 				</div>
 				<div class="boxes">
