First section finished, started products section
Signed-off-by: Nick Jonas <njonas45@gmail.com>

--- a/www_public/index.html
+++ b/www_public/index.html
@@ -32,28 +32,41 @@
 					<a id="logo-icon" class="box hide-text" href="/">Tweeds
 						<span class="icon"></span>
 					</a>
-					<a id="nav-arrow" class="box hide-text" href="#/nav">Navigation
+					<a id="nav-arrow" class="box hide-text" href="#">Navigation
 						<span class="arrow"></span>
 					</a>
 				</div>
 			</div>
+
 
 			<section id="lookbook">
 				<a href="#" id="prevslide" class="load-item arrow left"></a>
 				<a href="#" id="nextslide" class="load-item arrow right"></a>
 			</section>
 
+			<section id="products">
+
+			</section>
+
+
+
+
 		</div>
 
-		<!-- Application source.
-  		<script data-main="/src/config" src="/assets/js/libs/require.js"></script> -->
-  		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+		<!-- app source -->
+  		<script data-main="/src/config" src="/assets/js/libs/require.js"></script>
+
+  		<!--<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   		<script type="text/javascript" src="/assets/js/plugins/jquery.easing.min.js"></script>
   		<script type="text/javascript" src="/assets/js/plugins/supersized.3.2.7.min.js"></script>
-  		<script src="/assets/js/main.js"></script>
+  		<script src="/assets/js/main.js"></script> -->
 
   		<!-- Live Reload -->
   		<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+
+  		<script type="text/javascript" id="products-template">
+
+  		</script>
 
 	</body>
 
