--- a/www_public/index.html
+++ b/www_public/index.html
@@ -5,6 +5,11 @@
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 		<link rel="stylesheet" href="/assets/css/main.css">
 		<link rel="stylesheet" href="/assets/css/supersized.css" type="text/css" media="screen" />
+
+		<!-- typekit -->
+		<script type="text/javascript" src="//use.typekit.net/lkf4afo.js"></script>
+		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
 	</head>
 
 	<body>
