Background Transitions & Product Circles
Signed-off-by: Nick Jonas <njonas45@gmail.com>

--- a/build2/www_public/index.html
+++ b/build2/www_public/index.html
@@ -1,25 +1,66 @@
-<html>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 	<head>
 
-		<title>Tweeds</title>
+		<meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Tweeds</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-		<link rel="stylesheet" href="/assets/css/main.css">
-		<link rel="stylesheet" href="/assets/css/supersized.css" type="text/css" media="screen" />
-
-        <!-- typekit prod
-        <script type="text/javascript" src="//use.typekit.net/iki3uhf.js"></script>
-        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-		-->
-
-        <!-- typekit local -->
-		<script type="text/javascript" src="//use.typekit.net/lkf4afo.js"></script>
-		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+		<link rel="stylesheet" href="assets/css/main.css">
+		<link rel="stylesheet" href="assets/css/supersized.css" type="text/css" media="screen" />
 
 	</head>
 
 	<body>
 
+        <!-- LOOKBOOK -->
+        <section id="lookbook" class="section lookbook" data-type="background" data-offsetY="0" data-speed="0"></section>
 
+        <!-- PRODUCTS -->
+        <section id ="products-1" class="section products products-1" data-type="background" data-offsetY="450" data-speed="3">
+            <!-- <div class="content">
+                <div class="circle-0 product-circle" data-type="sprite" data-offsetY="800" data-speed="2"></div>
+                <div class="circle-1 product-circle" data-type="sprite" data-offsetY="700" data-speed="4"></div>
+                <div class="circle-2 product-circle" data-type="sprite" data-offsetY="770" data-speed="6"></div>
+            </div> -->
+        </section>
+        <section id ="products-2" class="section products products-2" data-type="background" data-offsetY="640" data-speed="4">
+            <!-- <div class="content">
+                <div class="circle-2 product-circle" data-type="sprite" data-offsetY="1200" data-speed="2"></div>
+                <div class="circle-1 product-circle" data-type="sprite" data-offsetY="1100" data-speed="3"></div>
+                <div class="circle-0 product-circle" data-type="sprite" data-offsetY="1000" data-speed="6"></div>
+            </div> -->
+        </section>
+
+        <!-- ABOUT -->
+        <section id="about" class="section about" data-type="background" data-offsetY="700" data-speed="6"></section>
+
+        <!-- BUY -->
+        <section id="buy" class="section buy" data-type="background" data-offsetY="980" data-speed="5"></section>
+
+        <!-- INSTAGRAM -->
+        <section id="instagram" class="section instagram"></section>
+
+
+
+        <!-- typekit prod
+        <script type="text/javascript" src="//use.typekit.net/iki3uhf.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+        -->
+
+        <!-- typekit local -->
+        <script type="text/javascript" src="//use.typekit.net/lkf4afo.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
+        <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script src="assets/js/main.js"></script>-->
+        <script data-main="src/config" src="assets/js/libs/require.js"></script>
 
 	</body>
 
