About section solution
Signed-off-by: Nick Jonas <njonas45@gmail.com>

--- a/build2/webapp/index.html
+++ b/build2/webapp/index.html
@@ -58,10 +58,10 @@
                                 </div>
                                 <div class="pager" data-left="1" data-right="3"></div>
                                 <div class="about-nav-arrows">
-                                    <div class="left left-arrow-black"></div>
-                                    <div class="right right-arrow-black"></div>
+                                    <div class="right right-arrow-white"></div>
                                 </div>
                             </div>
+                            <div class="sl-slide-inner-2"></div>
                         </div>
 
                         <div id="kolohe-slide" class="sl-slide bg-2" data-orientation="horizontal" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5" data-slice2-scale="1.5">
@@ -75,6 +75,7 @@
                                     <div class="right right-arrow-white"></div>
                                 </div>
                             </div>
+                            <div class="sl-slide-inner-2"></div>
                         </div>
 
                         <div id="story-slide" class="sl-slide bg-3" data-orientation="horizontal" data-slice1-rotation="3" data-slice2-rotation="3" data-slice1-scale="2" data-slice2-scale="1">
@@ -87,7 +88,6 @@
                                 <div class="pager" data-left="3" data-right="3"></div>
                                 <div class="about-nav-arrows">
                                     <div class="left left-arrow-black"></div>
-                                    <div class="right right-arrow-black"></div>
                                 </div>
                             </div>
                         </div>
