--- a/build2/webapp/index.html
+++ b/build2/webapp/index.html
@@ -28,18 +28,71 @@
         <!-- PRODUCTS -->
         <section id ="products-1" class="section products products-1" data-type="background" data-offsetY="260" data-speed="5">
             <div class="content">
-                <div class="circle-0 product-circle" data-type="sprite" data-offsetY="800" data-speed="2"></div>
-                <div class="circle-1 product-circle" data-type="sprite" data-offsetY="700" data-speed="4"></div>
-                <div class="circle-2 product-circle" data-type="sprite" data-offsetY="770" data-speed="6"></div>
+                <div id="hotel-santorini" class="circle-0 product-circle" data-type="sprite" data-offsetY="800" data-speed="2">
+                    <div class="product-shot">
+                        <img src="assets/img/src/products/small/Tweeds07.png"/>
+                    </div>
+                    <div class="product-name">
+                        <h1 class="product-no">01</h1>
+                        <div class="product-name-container"><h1>HOTEL SANTORINI</h1></div>
+                        <div class="see-details hide-text"></div>
+                    </div>
+                </div>
+                <div id="collection-label" class="circle-1 product-circle" data-type="sprite" data-offsetY="700" data-speed="4">
+                    <div class="product-shot"></div>
+                    <div class="product-name">
+                        <h1 class="product-no">THE</h1>
+                        <div class="product-name-container"><h1>COLLECTION</h1></div>
+                        <div class="see-details hide-text"></div>
+                    </div>
+                </div>
+                <div id="pleasant-ville" class="circle-2 product-circle" data-type="sprite" data-offsetY="770" data-speed="6">
+                    <div class="product-shot">
+                        <img src="assets/img/src/products/small/Tweeds05.png"/>
+                    </div>
+                    <div class="product-name">
+                        <h1 class="product-no">02</h1>
+                        <div class="product-name-container"><h1>PLEASANT-VILLE</h1></div>
+                        <div class="see-details hide-text"></div>
+                    </div>
+                </div>
             </div>
             <div class="page-down white" data-nextsection="2650" data-type="sprite" data-offsetY="1500" data-speed="3"></div>
             <div class="pager white" data-left="1" data-right="2" data-type="sprite" data-offsetY="2100" data-speed="2"></div>
         </section>
+
         <section id ="products-2" class="section products products-2" data-type="background" data-offsetY="600" data-speed="5">
             <div class="content">
-                <div class="circle-2 product-circle" data-type="sprite" data-offsetY="1500" data-speed="2"></div>
-                <div class="circle-1 product-circle" data-type="sprite" data-offsetY="1300" data-speed="3"></div>
-                <div class="circle-0 product-circle" data-type="sprite" data-offsetY="1100" data-speed="6"></div>
+                <div id="hello-heather" class="circle-2 product-circle" data-type="sprite" data-offsetY="1500" data-speed="2">
+                    <div class="product-shot">
+                        <img src="assets/img/src/products/small/Tweeds01.png"/>
+                    </div>
+                    <div class="product-name">
+                        <h1 class="product-no">03</h1>
+                        <div class="product-name-container"><h1>HELLO HEATHER</h1></div>
+                        <div class="see-details hide-text"></div>
+                    </div>
+                </div>
+                <div id="iceberg-slim" class="circle-1 product-circle" data-type="sprite" data-offsetY="1300" data-speed="3">
+                    <div class="product-shot">
+                        <img src="assets/img/src/products/small/Tweeds10.png"/>
+                    </div>
+                    <div class="product-name">
+                        <h1 class="product-no">04</h1>
+                        <div class="product-name-container"><h1>ICEBERG SLIM</h1></div>
+                        <div class="see-details hide-text"></div>
+                    </div>
+                </div>
+                <div id="smile-after-dark" class="circle-0 product-circle" data-type="sprite" data-offsetY="1100" data-speed="6">
+                    <div class="product-shot">
+                        <img src="assets/img/src/products/small/Tweeds03.png"/>
+                    </div>
+                    <div class="product-name">
+                        <h1 class="product-no">05</h1>
+                        <div class="product-name-container"><h1>SMILE AFTER DARK</h1></div>
+                        <div class="see-details hide-text"></div>
+                    </div>
+                </div>
             </div>
             <div class="page-down white" data-nextsection="3842" data-type="sprite" data-offsetY="2100" data-speed="3"></div>
             <div class="pager white" data-left="2" data-right="2" data-type="sprite" data-offsetY="2600" data-speed="2"></div>
