--- a/build2/webapp/index.html
+++ b/build2/webapp/index.html
@@ -19,6 +19,11 @@
 
 	<body>
 
+        <div id="nextPageArrow" class="page-down white" data-nextsection="2650">
+            <span class="arrow"></span>
+            <h1 class="nextPageLabel"></h1>
+        </div>
+
         <!-- LOOKBOOK -->
         <section id="lookbook" class="section lookbook" data-type="background" data-offsetY="0" data-speed="0">
             <div id="prevslide" class="lookbook-arrow left left-arrow-white"></div>
@@ -57,7 +62,7 @@
                     </div>
                 </div>
             </div>
-            <div class="page-down white" data-nextsection="2650" data-type="sprite" data-offsetY="1500" data-speed="3"></div>
+            <!-- <div class="page-down white" data-nextsection="2650"></div> -->
             <div class="pager white" data-left="1" data-right="2" data-type="sprite" data-offsetY="2100" data-speed="2"></div>
         </section>
 
@@ -94,7 +99,7 @@
                     </div>
                 </div>
             </div>
-            <div class="page-down white" data-nextsection="3842" data-type="sprite" data-offsetY="2100" data-speed="3"></div>
+            <!-- <div class="page-down white" data-nextsection="3842"></div> -->
             <div class="pager white" data-left="2" data-right="2" data-type="sprite" data-offsetY="2600" data-speed="2"></div>
         </section>
 
@@ -148,7 +153,7 @@
                     </div><!-- /sl-slider -->
                 </div><!-- /slider-wrapper -->
 
-                <div class="page-down white" data-nextsection="4840"></div>
+                <!-- <div class="page-down white" data-nextsection="4840"></div> -->
 
         </section>
 
