--- a/build2/webapp/index.html
+++ b/build2/webapp/index.html
@@ -19,10 +19,14 @@
 
 	<body>
 
+        <!-- next page arrow -->
         <div id="nextPageArrow" class="page-down white" data-nextsection="2650">
             <span class="arrow"></span>
             <h1 class="nextPageLabel"></h1>
         </div>
+
+        <!--  product section page notification (i.e. 1/2 )-->
+        <div id="products-pager" class="pager white" data-left="1" data-right="2" data-type="sprite" data-offsetY="2100" data-speed="2"></div>
 
         <!-- LOOKBOOK -->
         <section id="lookbook" class="section lookbook" data-type="background" data-offsetY="0" data-speed="0">
@@ -33,7 +37,7 @@
         <!-- PRODUCTS -->
         <section id ="products-1" class="section products products-1" data-type="background" data-offsetY="260" data-speed="5">
             <div class="content">
-                <div id="hotel-santorini" class="circle-0 product-circle" data-type="sprite" data-offsetY="800" data-speed="2">
+                <div id="hotel-santorini" class="circle-0 product-circle" data-type="sprite" data-offsetY="900" data-speed="2">
                     <div class="product-shot">
                         <img src="assets/img/src/products/small/Tweeds07.png"/>
                     </div>
@@ -43,7 +47,7 @@
                         <div class="see-details hide-text"></div>
                     </div>
                 </div>
-                <div id="collection-label" class="circle-1 product-circle" data-type="sprite" data-offsetY="700" data-speed="4">
+                <div id="collection-label" class="circle-1 product-circle" data-type="sprite" data-offsetY="800" data-speed="4">
                     <div class="product-shot"></div>
                     <div class="product-name">
                         <h1 class="product-no">THE</h1>
@@ -51,7 +55,7 @@
                         <div class="see-details hide-text"></div>
                     </div>
                 </div>
-                <div id="pleasant-ville" class="circle-2 product-circle" data-type="sprite" data-offsetY="770" data-speed="6">
+                <div id="pleasant-ville" class="circle-2 product-circle" data-type="sprite" data-offsetY="870" data-speed="6">
                     <div class="product-shot">
                         <img src="assets/img/src/products/small/Tweeds05.png"/>
                     </div>
@@ -62,11 +66,10 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="page-down white" data-nextsection="2650"></div> -->
-            <div class="pager white" data-left="1" data-right="2" data-type="sprite" data-offsetY="2100" data-speed="2"></div>
+            <!-- <div class="pager white" data-left="1" data-right="2" data-type="sprite" data-offsetY="2100" data-speed="2"></div> -->
         </section>
 
-        <section id ="products-2" class="section products products-2" data-type="background" data-offsetY="600" data-speed="5">
+        <section id ="products-2" class="section products products-2" data-type="background" data-offsetY="650" data-speed="4.5">
             <div class="content">
                 <div id="hello-heather" class="circle-2 product-circle" data-type="sprite" data-offsetY="1500" data-speed="2">
                     <div class="product-shot">
@@ -99,8 +102,7 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="page-down white" data-nextsection="3842"></div> -->
-            <div class="pager white" data-left="2" data-right="2" data-type="sprite" data-offsetY="2600" data-speed="2"></div>
+            <!-- <div class="pager white" data-left="2" data-right="2" data-type="sprite" data-offsetY="2600" data-speed="2"></div> -->
         </section>
 
         <!-- ABOUT -->
@@ -153,12 +155,20 @@
                     </div><!-- /sl-slider -->
                 </div><!-- /slider-wrapper -->
 
-                <!-- <div class="page-down white" data-nextsection="4840"></div> -->
-
         </section>
 
         <!-- BUY -->
-        <section id="buy" class="section buy" data-type="background" data-offsetY="950" data-speed="5"></section>
+        <section id="buy" class="section buy" data-type="background" data-offsetY="1010" data-speed="5">
+
+            <div class="buy-content">
+                <h1>TWEEDS IS AVAILABLE<br/>AT THESE FINE RETAILERS...</h1>
+                <div class="store-container">
+                    <a class="white-circle store-btn surf-stitch" href="http://www.surfstitch.com/brand/tweeds" target="_blank"><span class="label">SURF STICH</span></a>
+                    <a class="white-circle store-btn swell" href="http://www.swell.com/Search?q=tweeds" target="_blank"><span class="label">SWELL .COM</span></a>
+                </div>
+            </div>
+
+        </section>
 
         <!-- INSTAGRAM -->
         <section id="instagram" class="section instagram"></section>
