--- a/build2/webapp/index.html
+++ b/build2/webapp/index.html
@@ -90,7 +90,7 @@
         <div class="spacer" style="display:block; height:7000px; background:#FF0000; position:relative; top:100%; left:0px; width:100%; z-index:2; opacity:0;"></div>
 
         <!-- PRODUCTS -->
-        <section id ="products-1" class="section products products-1" data-type="background" data-offsetY="260" data-speed="5">
+        <section id ="products-1" class="section products products-1 start-left" data-type="background" data-offsetY="260" data-speed="5">
             <div class="content">
                 <div id="hotel-santorini" class="circle-0 product-circle" data-type="sprite" data-offsetY="900" data-speed="2">
                     <div class="product-shot">
@@ -123,7 +123,7 @@
             </div>
         </section>
 
-        <section id ="products-2" class="section products products-2" data-type="background" data-offsetY="650" data-speed="4.5">
+        <section id ="products-2" class="section products products-2 start-right" data-type="background" data-offsetY="650" data-speed="4.5">
             <div class="content">
                 <div id="hello-heather" class="circle-2 product-circle" data-type="sprite" data-offsetY="1500" data-speed="2">
                     <div class="product-shot">
